# torchrec

./: .gitmodules  setup.py
torchrec/inference/: CMakeLists.txt  README.md  server.cpp
torchrec/inference/src/: GPUExecutor.cpp
